--- a/renamer/Projects/CodeBlocks/Renamer.cbp
+++ b/renamer/Projects/CodeBlocks/Renamer.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="libboost_regex-mgw.lib" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output=".\Renamer.exe" prefix_auto="1" extension_auto="1" />
@@ -32,6 +35,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="..\..\Source\globals.h" />
 		<Unit filename="..\..\Source\main.cpp" />
 		<Extensions>
 			<code_completion />
