--- a/renamer/Projects/CodeBlocks/Renamer.cbp
+++ b/renamer/Projects/CodeBlocks/Renamer.cbp
@@ -12,11 +12,13 @@
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="--set Test" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
 					<Add library='&quot;libboost_Program_options-mgw-sd&quot;' />
+					<Add library='&quot;libboost_filesystem-mgw-sd&quot;' />
 				</Linker>
 			</Target>
 			<Target title="Release">
