--- a/dotnet/Renamer/Renamer .NET.vcproj
+++ b/dotnet/Renamer/Renamer .NET.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;D:\Programme\Codeblocks\Boost-1_33_1\include\boost-1_33_1&quot;;&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\sqlite3.3.12\Source&quot;"
+				AdditionalIncludeDirectories="&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\renamer\Source&quot;;&quot;D:\Programme\Codeblocks\Boost-1_33_1\include\boost-1_33_1&quot;;&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\sqlite3.3.12\Source&quot;"
 				PreprocessorDefinitions="_WIN32;_DEBUG;SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -59,7 +59,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sqlite.lib libboost_filesystem-vc80-mt.lib libboost_unit_test_framework-vc80-mt.lib libboost_regex-vc80-mt.lib libboost_program_options-vc80-mt.lib $(NOINHERIT)"
+				AdditionalDependencies="boost_regex-vc80-mt.lib boost_filesystem-vc80-mt.lib sqlite.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\dotnet\release&quot;;&quot;D:\Programme\Codeblocks\Boost-1_33_1\lib&quot;;D:\boost\lib"
 				GenerateDebugInformation="true"
@@ -119,13 +119,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-<<<<<<< .mine
 				AdditionalIncludeDirectories="&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\renamer\Source&quot;;&quot;D:\Programme\Codeblocks\Boost-1_33_1\include\boost-1_33_1&quot;;&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\sqlite3.3.12\Source&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_SCL_SECURE_NO_DEPRECATE"
-=======
-				AdditionalIncludeDirectories="&quot;D:\Programme\Codeblocks\Boost-1_33_1\include\boost-1_33_1&quot;;&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\sqlite3.3.12\Source&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_SCL_SECURE_NO_DEPRECATE"
->>>>>>> .r39
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -142,13 +137,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-<<<<<<< .mine
 				LinkLibraryDependencies="false"
 				AdditionalDependencies="boost_regex-vc80-mt.lib boost_filesystem-vc80-mt.lib sqlite.lib"
 				OutputFile="..\bin\$(ProjectName).exe"
-=======
-				LinkLibraryDependencies="false"
->>>>>>> .r39
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;D:\Dokumente und Einstellungen\Artur\Desktop\Develop\Renamer\dotnet\release&quot;;&quot;D:\Programme\Codeblocks\Boost-1_33_1\lib&quot;;D:\boost\lib"
 				GenerateDebugInformation="true"
@@ -211,6 +202,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Application.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\AssemblyInfo.cpp"
 				>
 			</File>
@@ -244,6 +239,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Application.h"
+				>
+			</File>
 			<File
 				RelativePath=".\ApplicationForm.h"
 				FileType="3"
@@ -280,7 +279,6 @@
 		<Filter
 			Name="Renamer Source"
 			>
-<<<<<<< .mine
 			<File
 				RelativePath="..\..\renamer\Source\globals.h"
 				>
@@ -294,9 +292,6 @@
 				>
 			</File>
 		</Filter>
-=======
-		</Filter>
->>>>>>> .r39
 	</Files>
 	<Globals>
 	</Globals>
